--- a/resume.css
+++ b/resume.css
@@ -8,6 +8,7 @@ body {
 h1 {
     font-size: 40px;
     color: red;
+    float:left;
 }
 
 h2 {
@@ -42,6 +43,7 @@ li {
     color: blue;
     font-size: 20px;
     font-weight: lighter;
+    float:right;
     
 }
 
@@ -62,12 +64,10 @@ img {
     background: red;
     padding-left: inherit;
     padding-right: inherit;
+    border-bottom: 5px solid black;
 }
 
 .heading1 {
     font-size: 50px;
-    color: white;
-    text-align: center;
-    margin: auto;
-    
+    color: white;    
 }
