--- a/blogNoman.css
+++ b/blogNoman.css
@@ -4,9 +4,7 @@ body {
     margin-left: 20%;
     margin-right: 20%;
     text-align: left;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-bottom: 2%;
+    padding: 20px;
        
 }
 .date {
